--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,28 @@
+body, html {
+  overflow: auto;
+}
+
 .header-root {
   flex-grow: 1;
 }
 
 .header-title{
   flex-grow: 1;
+}
+
+
+
+::-webkit-scrollbar-thumb {
+  /* background-color: #b7b7b7;
+  border-radius: 5px;  */
+  /* border: 4px solid rgba(0, 0, 0, 0); */
+  background-clip: padding-box;
+  -webkit-border-radius: 7px;
+  background-color: rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: inset -1px -1px 0px rgba(0, 0, 0, 0.05), inset 1px 1px 0px rgba(0, 0, 0, 0.05);  
+}
+::-webkit-scrollbar {
+  /* width: 0.2em; */
+  height: 7px;
+  width: 5px;
 }
